--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "angular": "^1.3.0",
     "angular-animate": "^1.3.0",
     "angular-route": "^1.3.0",
-    "semantic-ui": "~1.9.3"
+    "semantic-ui": "~1.9.3",
+    "d3": "~3.5.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
