--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-route": "^1.3.0",
     "semantic-ui": "~1.9.3",
     "d3": "~3.5.5",
-    "c3": "~0.4.10"
+    "c3": "~0.4.10",
+    "jquery-ui": "~1.11.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
