--- a/bower.json
+++ b/bower.json
@@ -4,15 +4,11 @@
   "dependencies": {
     "angular": "^1.3.0",
     "angular-animate": "^1.3.0",
-    "angular-route": "^1.3.0",
     "semantic-ui": "~1.9.3",
     "d3": "~3.5.5",
-    "c3": "~0.4.10",
-    "jquery-ui": "~1.11.4"
+    "c3": "~0.4.10"
   },
-  "devDependencies": {
-    "angular-mocks": "^1.3.0"
-  },
+  "devDependencies": {},
   "appPath": "app",
   "moduleName": "senseMakingApp",
   "resolutions": {
